<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24px_rounded"
        android:title="Home"/>
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart_24px_rounded"
        android:title="Cart"/>
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_messages_24px_rounded"
        android:title="Messages"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_circle_24px_rounded"
        android:title="Profile"/>
</menu>